[package]
name = "chatGpt_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json", "socks"] }
clap = { version = "4.1.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"